@@ -1,4 +1,6 @@
 TODO
+- TODO: anti-gravity tool
+- Doubled world width
 - Improved bulkiness of tsunami's and interactive waves
 	- And added a new setting to customize it at will
 - Improved resolution of ship previews
